various local improvements